--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     }
   ],
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.2.0"
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "~0.10.0"
   },
   "scripts": {
     "test": "grunt test"
   },
   "dependencies": {
-    "wd": "~0.2.5",
-    "mocha": "~1.14.0",
-    "freeport": "~1.0.2"
+    "freeport": "~1.0.3",
+    "mocha": "~1.21.4",
+    "wd": "~0.3.6"
   }
 }
